# comp-syn

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.rst  __init__.py  cologram_continuum_parallel.ipynb  colorgram_continuum.ipynb  compsyn_package_pipeline.ipynb  data_loading.ipynb  datahelper.py  env-template  example-env  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-raw.py  tests.py  unset-shared-env  visualisation.py
.ci/: .env.pytest  docker-compose.yml
.github/workflows/: publish.yml  pytest-pr.yml  pytest.yml
base-image/: Dockerfile  README  build.sh
compsyn/: __init__.py  analysis.py  browser.py  color.py  config.py  datahelper.py  experiment.py  helperfunctions.py  jzazbz.py  logger.py  s3.py  texture.py  trial.py  utils.py  vector.py  vectors.py  visualisation.py  wordnet_functions.py  wordtocolor_vector.py
data/: README.md  concreteness.md  dataset.py
notebooks/: colorgram_continuum.ipynb  compsyn_package_pipeline.ipynb  configuration.ipynb  data_loading.ipynb  experiment.ipynb  quick_colorgram.ipynb  resumable_local_experiment.ipynb  trial_and_vector.ipynb  vectors.ipynb  wordnet.ipynb
tests/: test_analysis.py  test_config.py  test_imagedata.py  test_s3.py  test_texture.py  test_utils.py  test_vectors.py  test_visualisation.py
