[tool.poetry]
name = "compsyn"
version = "1.0.0b0"
description = "python package to explore the color of language"
authors = ["comp-syn <group@comp-syn.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-api-core = "^1.14.3"
google-auth = "^1.6.3"
google-cloud = "^0.34.0"
google-cloud-vision = "^0.39.0"
googleapis-common-protos = "^1.6.0"
notebook = "^6.0.3"
ipykernel = "^5.2.0"
beautifulsoup4 = "^4.9.0"
pillow = "^8.1.1"
nltk = "^3.4.5"
numba = "^0.48.0"
pandas = "^1.0.3"
textblob = "^0.15.3"
grpcio = "^1.28.1"
matplotlib = "^3.2.1"
scikit-learn = "^0.22.2"
scikit-image = "^0.16.2"
seaborn = "^0.10.0"
requests = "^2.23.0"
memory_profiler = "^0.57.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-depends = "^1.0.1"
black = "^19.10b0"
toml = "^0.10.2"
boto3 = "^1.14.4"
numpy = "^1.19.5"
kymatio = "^0.2.0"
torch = "1.7.1"
qloader = "^8.1.0"

# pinned due to issues in jupyter notebook with upgraded versions, worth another look
IPython = "7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
