[tool.poetry]
name = "compsyn"
version = "1.0.1"
description = "python package to explore the color of language"
authors = ["comp-syn <group@comp-syn.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
google-api-core = "^2.3.2"
google-auth = "^2.3.3"
google-cloud = "^0.34.0"
google-cloud-vision = "^2.6.3"
googleapis-common-protos = "^1.54.0"
notebook = "^6.4.6"
ipykernel = "^6.6.1"
beautifulsoup4 = "^4.10.0"
Pillow = "^9.0.0"
nltk = "^3.6.7"
numba = "^0.54.1"
pandas = "^1.3.5"
textblob = "^0.17.1"
grpcio = "^1.43.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
scikit-image = "^0.19.1"
seaborn = "^0.11.2"
requests = "^2.27.1"
memory-profiler = "^0.60.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-depends = "^1.0.1"
black = "^21.12b0"
toml = "^0.10.2"
boto3 = "^1.20.30"
kymatio = "^0.2.1"
ipython = "^7.31.0"
qloader = "^8.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
