[tool.poetry]
name = "compsyn"
version = "1.0.2"
description = "python package to explore the color of language"
authors = ["comp-syn <group@comp-syn.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
google-api-core = "*"
google-auth = "*"
google-cloud = "*"
google-cloud-vision = "*"
googleapis-common-protos = "*"
notebook = "*"
ipykernel = "*"
beautifulsoup4 = "*"
Pillow = "*"
nltk = "*"
numba = "*"
pandas = "*"
textblob = "*"
grpcio = "*"
matplotlib = "*"
scikit-learn = "*"
scikit-image = "*"
seaborn = "*"
requests = "*"
memory-profiler = "*"
pytest = "*"
pytest-cov = "*"
pytest-depends = "*"
black = "*"
toml = "*"
boto3 = "*"
kymatio = "*"
ipython = "*"
qloader = "*"

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.masonry.api"
